--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: java
 jdk:
-  - openjdk6
+  - openjdk8
   - openjdk7
+  
+after_success:
+  - mvn clean cobertura:cobertura coveralls:cobertura
