--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 jdk:
-  - openjdk8
   - openjdk7
-  
+  - openjdk6
+
 after_success:
-  - mvn clean cobertura:cobertura coveralls:cobertura
+  - mvn clean test jacoco:report coveralls:report
